--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Siddhartha Bhunia
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: I am working on IOT and Embedded System from last 5 years, currently i am learning Machine learning to deploy on my field of Automation
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
