--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Siddhartha Bhunia
-logo: /assets/img/logo.png
+logo: /assets/img/download (2).jpg
 description: I am working on IOT and Embedded System from last 5 years, currently i am learning Machine learning to deploy on my field of Automation
 show_downloads: true
 google_analytics:
